--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -1,1 +1,28 @@
-!
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Primeiro Programa</title>
+    <style>
+        body{
+            background-color: rgb(223, 147, 147);
+            color: darkmagenta;
+            font:normal 2em arial;
+        }
+
+    </style>
+</head>
+<body>
+    <h1>Olá Mundo!</h1>
+    <p>já me livrei da maldição</p>
+    <script>
+        window.alert('Quero morrer'); //suicidio
+        window.confirm('Quer chupar pau?') //quer chupar pau?
+        window.prompt('Qual seu nome?') //pergunta nome
+        var n1 = 5
+    </script>
+    
+</body>
+</html>
