--- a/JavaScript básico/ex005.html
+++ b/JavaScript básico/ex005.html
@@ -29,7 +29,7 @@
             var tixt = window.document.querySelector('div#resul')
             var tn1 = window.prompt('Digite um número:')
             var n1 = Number(tn1)
-            tixt.innerHTML = `O dobro de ${n1} é ${n1*2} e a metade é ${n1/2}`
+            tixt.innerHTML = `O dobro de ${n1} é ${n1*2} e a metade é ${n1/2}!`
 
         }
     </script>
