--- a/exercicios/DetectorDeIdade/ex.html
+++ b/exercicios/DetectorDeIdade/ex.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20220719/original/pngtree-red-skull-png-png-image_8366153.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo.css">
-    <title>Verificador de Idade</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Verificador de Idade</h1>
-    <div id="div">
-        <p><label for="nasc">Ano de Nascimento:</label><input type="number" name="nasc" id="nasc" min="1934" max="2022"></p>
-        <p>
-            <label for="sex">Sexo:</label><input type="radio" name="sex" value="Masc">Masculino
-            <input type="radio" name="sex" value="Fem">Feminino
-        </p>
-        <input type="button" value="Verificar" onclick="clicou()">
-    </div>
+    <header>
+        <h1></h1>
+    </header>
+    <section>
+        <div></div>
+    </section>
+    <footer>&copy;</footer>
+
+    <script src="script.js"></script>
+    
 </body>
 </html>
