--- a/exercicios/HoraDodia/ex.html
+++ b/exercicios/HoraDodia/ex.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Hora do dia</title>
 </head>
-<body>
-    <h1>Hora do Dia</h1>
-    <div id="caixa">
-        <p id="te"></p>
-        <div id="img"></div>
-    </div>
-    <p>@KauaCly</p>
+<body onload="começou()">
+    <header>
+        <h1>Hora do Dia</h1>
+    </header>
+    <main>
+        <div id="caixa">
+            <p id="te"></p>
+            <div id="img"></div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; KauaCly</p>
+    </footer>
     <script src="código.js"></script>
     
 </body>
