--- a/exercicios/DetectorDeIdade/ex.html
+++ b/exercicios/DetectorDeIdade/ex.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20220719/original/pngtree-red-skull-png-png-image_8366153.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <title>Detector de Idade</title>
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Verificador de Idade</h1>
     </header>
     <section>
-        <div></div>
+        <div >
+            <p>Ano de nascimento: <input type="number" name="txtano" id="txtano" min="0"></p>
+            <p>sexo: <input type="radio" name="radsex" id="masc" checked><label for="masc">Masculino</label><input type="radio" name="radsex" id="fem"><label for="fem">Feminino</label></p>
+            <p><input type="button" value="Verificar" onclick="verificar()"></p>
+        </div>
+        <div id="res">
+            <p>Preencha os dados acima para ver o resultado!</p>
+        </div>
     </section>
     <footer>&copy;</footer>
 
