--- a/exercicios/DetectorDeIdade/ex.html
+++ b/exercicios/DetectorDeIdade/ex.html
@@ -20,6 +20,7 @@
         </div>
         <div id="res">
             <p>Preencha os dados acima para ver o resultado!</p>
+            <div id="img"></div>
         </div>
     </section>
     <footer>&copy;</footer>
