--- a/Condições em JavaScript/ex011/ex.html
+++ b/Condições em JavaScript/ex011/ex.html
@@ -9,9 +9,10 @@
     <title>Números com JS</title>
 </head>
 <body>
-    <h1>Média do aluno  V2.0</h1>
+    <h1 id="h1">Média do aluno  V2.0</h1>
     <input type="button" value="Calcular media" onclick="clicou()">
     <p id="res">O resultado vai aparecer aqui...</p>
+    
     <script src="código.js"></script>
     
 </body>
