--- a/Condições em JavaScript/ex014/ex.html
+++ b/Condições em JavaScript/ex014/ex.html
@@ -14,7 +14,7 @@
         <p>Nesse exemplo iremos pegar os dados do sistema de dia da semana, mês, dia de número e etc.</p>
     </header>
     <main>
-        <input type="button" value="Clique para começar">
+        <input type="button" value="Clique para começar" onclick="clicou()">
         <p id="res">O resultado aparecerá aqui...</p>
     </main>
     <script src="codigo.js"></script>
