--- a/Condições em JavaScript/ex018/ex.html
+++ b/Condições em JavaScript/ex018/ex.html
@@ -14,7 +14,7 @@
         <p>Olá! tente acertar o número que pensei...</p>
     </header>
     <main>
-        <input type="button" value="Tente adivinhar">
+        <input type="button" value="Tente adivinhar" onclick="clicou()">
     </main>
     <p id="res">Já pensei no valor entre 1 e 100...</p>
     <script src="codigo.js"></script>
