--- a/exercicios/Contador/minhaVersão/ex.html
+++ b/exercicios/Contador/minhaVersão/ex.html
@@ -19,6 +19,7 @@
         <p><input type="button" value="enviar" onclick="Contador()"></p>
         <p id="res"></p>
     </section>
+    <footer><p>&copy;Kauã</p></footer>
 
     <script src="codigo.js"></script>
     
