--- a/exercicios/tabuada/guanabara/ex.html
+++ b/exercicios/tabuada/guanabara/ex.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Contador</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>titulo</h1>
+        <h1>tTabuada</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div>
+            <p>Número: <input type="number" name="num" id="num"> <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
+        </div>
+        <div>
+            <select name="tabuada" id="tabuada" size="10">
+            </select>
+        </div> 
     </section>
     <footer><p>&copy;</p></footer>
     <script src="script.js"></script>
