--- a/exercicios/AnalistaNumero/MinhaVersão/ex.html
+++ b/exercicios/AnalistaNumero/MinhaVersão/ex.html
@@ -17,7 +17,11 @@
             <p><label for="inum">Número(entre 1 e 100):</label><input type="number" name="inum" id="inum"><input type="button" value="adicionar" onclick="clicou()"></p>
         </div>
         <div id="resultado">
-            <select name="isel" id="isel" size="10"></select>
+            <select name="isel" id="isel" size="10">
+                <option value="">
+                </option>
+            </select>
+            <p><input type="button" value="Verificar" onclick="verificação()"></p>
         </div>
     </section>
     <footer>
