--- a/exercicios/AnalistaNumero/MinhaVersão/ex.html
+++ b/exercicios/AnalistaNumero/MinhaVersão/ex.html
@@ -17,11 +17,12 @@
             <p><label for="inum">Número(entre 1 e 100):</label><input type="number" name="inum" id="inum"><input type="button" value="adicionar" onclick="clicou()"></p>
         </div>
         <div id="resultado">
-            <select name="isel" id="isel" size="10">
+            <select name="isel" id="isel" size="6">
                 <option value="">
                 </option>
             </select>
             <p><input type="button" value="Verificar" onclick="verificação()"></p>
+            <p id="veri"></p>
         </div>
     </section>
     <footer>
