--- a/exercicios/AnalistaNumero/guanabara/ex.html
+++ b/exercicios/AnalistaNumero/guanabara/ex.html
@@ -14,7 +14,7 @@
     <section>
     <div>Número de 1 a 100: <input type="number" name="fnum" id="fnum"><input type="button" value="adicionar" onclick="adicionar()"><br>
         <select name="flista" id="flista" size="6"></select> 
-        <br><input type="button" value="finalizar">
+        <br><input type="button" value="finalizar" onclick="finalizar()">
     </div> 
         <div id="res">
 
