--- a/CFBcursos/aula34/aula34.html
+++ b/CFBcursos/aula34/aula34.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Aula 33 de JavaScript</title>
+    <title>Aula 34 de JavaScript</title>
 </head>
 <body>
-    <div id="c1" class="curso c1">HTML</div>
-    <div id="c2" class="curso c1">CSS</div>
-    <div id="c3" class="curso c1">JavaScript</div>
+    <div id="c1" class="curso c1"><p>HTML</p></div>
+    <div id="c2" class="curso c1"><p>CSS</p></div>
+    <div id="c3" class="curso c1"><p>JavaScript</p></div>
     <div id="c4" class="curso c1">PHP</div>
     <div id="c5" class="curso c1">React</div>
     <div id="c6" class="curso c1">MySQL</div>
@@ -20,6 +20,9 @@
     <div id="c10" class="curso c2">React Native</div>
     <div id="c11" class="curso c2">python</div>
     <div id="c12" class="curso c2">Raspberry</div>
-    <script src="ex.js"></script>    
+    <div id="c11" >photoshop</div>
+    <div id="c12" >AppInventor</div>
+    
+        <script src="ex.js"></script>    
 </body>
 </html>
