--- a/CFBcursos/aula44 a 47/aula44.html
+++ b/CFBcursos/aula44 a 47/aula44.html
@@ -13,7 +13,8 @@
         <div id="CaixaNovoCurso" class="caixaFuncionalidades">
             <label for="nomeCurso">Nome do curso:</label>
             <input type="text" name="nomeCurso" id="nomeCurso">
-            <button id="btnAdicionarNovoCurso">Adicionar</button>
+            <button id="btnAdicionarNovoCursoAntes">Adicionar antes</button>
+            <button id="BtnAdicionarNovoCursoDepois">Adicionar depois</button>
         </div>     
         <div id="CaixaRemoverCurso" class="caixaFuncionalidades">
             <button id="RemoverCurso">Remover Selecionado</button>
