--- a/CFBcursos/aula64 e 65-versãoprofessor/aula64.html
+++ b/CFBcursos/aula64 e 65-versãoprofessor/aula64.html
@@ -22,7 +22,7 @@
             <input type="number" name="f_blindagem" id="f_blindagem" disabled value="0">
         </div>
         <div class="campoForm">
-            <label for="f_municao">Munição:</label>
+             <label for="f_municao">Munição:</label>
             <input type="number" name="f_municao" id="f_municao" disabled value="0">
         </div>
         <div class="campoForm">
@@ -38,7 +38,7 @@
             <button id="btn_addCarro">Adicionar</button>
         </div>
     </div>
-    <div class="carros">
+    <div id="carros" class="carros">
         <!--<div class='carro'>Golf</div>-->
     </div>
     <script src="ex.js"></script>
