--- a/CFBcursos/aula71-73/index.html
+++ b/CFBcursos/aula71-73/index.html
@@ -14,29 +14,29 @@
             <p>Calculadora CFB Cursos</p>
         </div>
         <div id="div_display" class="div_display">
-            <p id="display"></p>
+            <p id="display">0</p>
         </div>
         <div id="div_Teclas" class="div_Teclas">
-            <button id="on" class="botao teclaOp" value='0'>ON</button>
-            <button id="CL" class="botao teclaOp">CL</button>
-            <button id="Pesquerdo" class="botao teclaOp">(</button>
-            <button id="Pdireito" class="botao teclaOp">)</button> <br>
-            <button id='t7' class="botao num">7</button>
+            <button id="on" class="botao teclaOp " >ON</button>
+            <button id="CL" class="botao teclaOp ">CL</button>
+            <button id="Pesquerdo" class="botao teclaOp op">(</button>
+            <button id="Pdireito" class="botao teclaOp op">)</button> <br>
+            <button id='t7' class="botao num" data-value="7">7</button>
             <button id="t8" class="botao num">8</button>
             <button id="t9" class="botao num">9</button>
-            <button id="mais" class="botao teclaOp">+</button> <br>
+            <button id="mais" class="botao teclaOp op">+</button> <br>
             <button id="t4" class="botao num">4</button>
             <button id="t5" class="botao num">5</button>
             <button id="t6" class="botao num">6</button>
-            <button id="menos" class="botao teclaOp">-</button> <br>
+            <button id="menos" class="botao teclaOp op">-</button> <br>
             <button id="t1" class="botao num">1</button>
             <button id="t2" class="botao num">2</button>
             <button id="t3" class="botao num">3</button>
-            <button id="multiplica" class="botao teclaOp">x</button> <br>
+            <button id="multiplica" class="botao teclaOp op">x</button> <br>
             <button id="zero" class="botao num">0</button>
-            <button id="virgula" class="botao teclaOp">,</button>
-            <button id="igual" class="botao teclaOp">=</button>
-            <button id="divide" class="botao teclaOp">/</button>
+            <button id="virgula" class="botao teclaOp num">.</button>
+            <button id="igual" class="botao teclaOp res">=</button>
+            <button id="divide" class="botao teclaOp op">/</button>
         </div>
     </div>
     <script src="ex.js"></script>
