--- a/CFBcursos/aula80-professorversão/index.html
+++ b/CFBcursos/aula80-professorversão/index.html
@@ -13,7 +13,7 @@
         <div id="div_data"></div>
         <div id="div_relogio" class="div_relogio">00:00:00</div>
         <div id="def_alarme" class="def_alarme">
-            <label id="hora_alarme">Hora do Alarme:</label>
+            <label id="hora_alarme">Hora do Alarme:</label> <br>
             <label>Tempo do alarme(segundos):</label>
             <input type="number" id="tmp_alarme" value="0" min="0">
         </div>
