la belle de jour

--- a/CFBcursos/aula108-112/aula108.html
+++ b/CFBcursos/aula108-112/aula108.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Aula 108</title>
+    <title>Aula animação</title>
 </head>
 <body>
     <div id="painel" class="painel">
-        <button id="btn_esquerdo">&lt;</button>
-        <button id="btn_direito">&gt;</button>
+        <button id="parar">Parar</button>
+        <button id="play">Play</button>
     </div>
     <div id="carro" class="carro"></div>
     <script src="ex.js"></script>
