--- a/CFBcursos/aula113/aula113.html
+++ b/CFBcursos/aula113/aula113.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Aula animação</title>
+    <title>Aula 113</title>
 </head>
 <body>
-    <div id="painel" class="painel">
-        <button id="parar">Stop(S)</button>
-        <button id="play">Play(E)</button>
+    <div id="info" class="info">
+        <p id="posx">posx:</p>
+        <p id="posy">posy:</p>
+        <p id="largura">largura:</p>
+        <p id="altura">altura:</p>
     </div>
-    <div id="carro" class="carro"></div>
+    <div id="q1" class="quadrado"></div>
+    <div id="q2" class="quadrado"></div>
     <script src="ex.js"></script>
     
 </body>
