--- a/CFBcursos/aula122/aula122.html
+++ b/CFBcursos/aula122/aula122.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Aula 117</title>
+    <title>Aula 122</title>
 </head>
 <body>
-    <p id="long"></p>
-    <p id="lati"></p>
+    <input type="text" nome="f_texto" id="f_texto">
+    <br>
+    <p id="p_texto"></p>
+    <button id="btn_texto">webStorage</button>
     <script src="ex.js"></script>
     
 </body>
