--- a/CFBcursos/aula130-133/aula130.html
+++ b/CFBcursos/aula130-133/aula130.html
@@ -15,6 +15,8 @@
            <button id="btn_parar" class="btn">Parar</button>
            <button id="btn_zerar" class="btn">Zerar</button>
        </div>
+       <p id="parciais">Parciais:
+       </p>
    </div>
    <script src="ex.js"></script>
 </body>
