--- a/CFBcursos/aula136-139/aula136.html
+++ b/CFBcursos/aula136-139/aula136.html
@@ -8,6 +8,9 @@
     <title>Aula 136</title>
 </head>
 <body>
+    <button id="btn_mostrarcxmsg" class="btn_mostrarcxmsg">Mostrar Caixa de Mensagem</button>
+
+    <script src="cxmsg.js"></script>
     <script src="topo.js"></script>
    <script src="ex.js"></script>
 </body>
