--- a/CFBcursos/aula136-139/aula136.html
+++ b/CFBcursos/aula136-139/aula136.html
@@ -8,10 +8,12 @@
     <title>Aula 136</title>
 </head>
 <body>
-    <button id="btn_mostrarcxmsg" class="btn_mostrarcxmsg">Mostrar Caixa de Mensagem</button>
+    <button id="btn_mostrarcxmsg1" class="btn_mostrarcxmsg">Mostrar Caixa de Mensagem 1</button>
+    <button id="btn_mostrarcxmsg2" class="btn_mostrarcxmsg">Mostrar Caixa de Mensagem 2</button>
+    <button id="btn_mostrarcxmsg3" class="btn_mostrarcxmsg">Mostrar Caixa de Mensagem 3</button>
 
-    <script src="cxmsg.js"></script>
+
     <script src="topo.js"></script>
-   <script src="ex.js"></script>
+   <script src="ex.js" type="module"></script>
 </body>
 </html>
