--- a/CFBcursos/aula141/index.html
+++ b/CFBcursos/aula141/index.html
@@ -7,7 +7,9 @@
     <title>Aula141</title>
 </head>
 <body>
-    
+    <p>Temperatura:<span id="tpm"></span></p>
+    <p>Nível:<span id="nvl"></span></p>
+    <p>Pressão:<span id="prs"></span></p>
     <script src="ex.js"></script>
 </body>
 </html>
