terminei o estudo por hj

--- a/CFBcursos/DataGridView-Projeto/index.html
+++ b/CFBcursos/DataGridView-Projeto/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="dgv_Produtos" class="dgv_Produtos">
-        <table>
+        <table id="table">
             <thead>
                 <tr>
                     <th class="c1">ID</th>
@@ -19,13 +19,7 @@
                     <th class="c5">Funções</th>
                 </tr>
             </thead> 
-            <tbody>
-                <td class="c1">01</td>
-                <td class="c2">Processador</td>
-                <td class="c3">Intel</td>
-                <td class="c4">i7</td>
-                <td class="c5">D E V </td>
-            </tbody>       
+        
         </table>
     </div>
     <script src="js.js" type="module"></script>
